force-app/main/default/objects/DrawAdvance_File_Data__c/DrawAdvance_File_Data__c.object-meta.xml
<CustomObject>
    <description>DrawAdvance File Data</description>
    <label>DrawAdvance_File_Data</label>
    <nameField>
        <displayFormat>File-{0000}</displayFormat>
        <label>DrawAdvance_File_Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DrawAdvance_File_Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>