force-app/main/default/objects/DrawAdvance_File_Data__c/fields/Create_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Task for this File Line</description>
    <inlineHelpText>Create Task for this File Line</inlineHelpText>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>