force-app/main/default/objects/DrawAdvance_File_Data__c/fields/ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessages__c</fullName>
    <description>ErrorMessages</description>
    <inlineHelpText>ErrorMessages</inlineHelpText>
    <label>ErrorMessages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>