force-app/main/default/objects/DrawAdvance_File_Data__c/fields/Field_Advance_Num__c.field-meta.xml
<CustomField>
    <fullName>Field_Advance_Num__c</fullName>
    <description>Field Advance Num</description>
    <inlineHelpText>Field Advance Num</inlineHelpText>
    <label>Field Advance Num</label>
    <length>8</length>
    <type>Text</type>
</CustomField>