force-app/main/default/objects/DrawAdvance_File_Data__c/fields/Field_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Line_Value__c</fullName>
    <description>All fields in of the line seperated b coma</description>
    <inlineHelpText>All fields in of the line separated b coma</inlineHelpText>
    <label>Field Line Value</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>