force-app/main/default/objects/DrawAdvance_File_Data__c/fields/Field_Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Field_Loan_ID__c</fullName>
    <description>File Field Loan ID</description>
    <inlineHelpText>File Field Loan ID</inlineHelpText>
    <label>Field_Loan ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>