force-app/main/default/objects/DrawAdvance_File_Data__c/fields/File_From_Bridge_Term__c.field-meta.xml
<CustomField>
    <fullName>File_From_Bridge_Term__c</fullName>
    <description>File From Bridge or Term</description>
    <inlineHelpText>File From Bridge or Term</inlineHelpText>
    <label>File From Bridge  or Term</label>
    <length>8</length>
    <type>Text</type>
</CustomField>