force-app/main/default/objects/DrawAdvance_File_Data__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>File Name</description>
    <inlineHelpText>File Name</inlineHelpText>
    <label>File Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>