force-app/main/default/objects/DrawAdvance_File_Data__c/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <description>From Email</description>
    <inlineHelpText>From Email</inlineHelpText>
    <label>From Email</label>
    <type>Email</type>
</CustomField>